[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atc-tracon-rl"
version = "1.0.0"
description = "OpenEnv-compliant Reinforcement Learning environment for ATC TRACON decision support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "air-traffic-control", "RL", "openenv", "TRACON"]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "requests>=2.32.2",
    "anthropic>=0.26.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"