[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-tracon-rl"
version = "1.0.0"
description = "ATC TRACON RL Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "requests>=2.32.2",
    "anthropic>=0.26.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["env", "env.server"]
package-dir = { "env" = ".", "env.server" = "server" }